// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsPoplist renders correctly 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-55k8e4-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.cache-q170gk-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-q170gk-StyledContainer-base.cache-q170gk-StyledContainer-base {
  margin-right: 0;
}

.cache-1xx2k26-StyledText-textStyle {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-1jveiaj-StyledManyTagsContainer {
  box-shadow: 0px 4px 32px 8px #D4DAE766;
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-p9ey6j-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-p9ey6j-StyledContainer-base.cache-p9ey6j-StyledContainer-base {
  margin: 4px;
}

.cache-1vwmh8m-StyledText {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-55k8e4-StyledTagContainer eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-q170gk-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1xx2k26-StyledText-textStyle e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
      </div>
      +1
      <div
        class="cache-1jveiaj-StyledManyTagsContainer eom2dbt0"
      >
        <div
          class="e1vt8sjg2 cache-p9ey6j-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1vwmh8m-StyledText e1vt8sjg1"
          >
            cloud
          </span>
        </div>
      </div>
    </div>
     
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-55k8e4-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.cache-4o2pls-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-4o2pls-StyledContainer-base.cache-4o2pls-StyledContainer-base {
  margin-right: 8px;
}

.cache-1xx2k26-StyledText-textStyle {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-q170gk-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-q170gk-StyledContainer-base.cache-q170gk-StyledContainer-base {
  margin-right: 0;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-55k8e4-StyledTagContainer eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-4o2pls-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1xx2k26-StyledText-textStyle e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
        <div
          class="e1vt8sjg2 cache-q170gk-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1xx2k26-StyledText-textStyle e1vt8sjg1"
          >
            cloud
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-55k8e4-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.cache-4o2pls-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-4o2pls-StyledContainer-base.cache-4o2pls-StyledContainer-base {
  margin-right: 8px;
}

.cache-1xx2k26-StyledText-textStyle {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-q170gk-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-q170gk-StyledContainer-base.cache-q170gk-StyledContainer-base {
  margin-right: 0;
}

.cache-1jveiaj-StyledManyTagsContainer {
  box-shadow: 0px 4px 32px 8px #D4DAE766;
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-p9ey6j-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-p9ey6j-StyledContainer-base.cache-p9ey6j-StyledContainer-base {
  margin: 4px;
}

.cache-1vwmh8m-StyledText {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-55k8e4-StyledTagContainer eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-4o2pls-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1xx2k26-StyledText-textStyle e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
        <div
          class="e1vt8sjg2 cache-q170gk-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1xx2k26-StyledText-textStyle e1vt8sjg1"
          >
            cloud
          </span>
        </div>
      </div>
      +1
      <div
        class="cache-1jveiaj-StyledManyTagsContainer eom2dbt0"
      >
        <div
          class="e1vt8sjg2 cache-p9ey6j-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1vwmh8m-StyledText e1vt8sjg1"
          >
            provider
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-55k8e4-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.cache-q170gk-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-q170gk-StyledContainer-base.cache-q170gk-StyledContainer-base {
  margin-right: 0;
}

.cache-1xx2k26-StyledText-textStyle {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-1jveiaj-StyledManyTagsContainer {
  box-shadow: 0px 4px 32px 8px #D4DAE766;
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-p9ey6j-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-p9ey6j-StyledContainer-base.cache-p9ey6j-StyledContainer-base {
  margin: 4px;
}

.cache-1vwmh8m-StyledText {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-55k8e4-StyledTagContainer eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-q170gk-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1xx2k26-StyledText-textStyle e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
      </div>
      +2
      <div
        class="cache-1jveiaj-StyledManyTagsContainer eom2dbt0"
      >
        <div
          class="e1vt8sjg2 cache-p9ey6j-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1vwmh8m-StyledText e1vt8sjg1"
          >
            cloud
          </span>
        </div>
        <div
          class="e1vt8sjg2 cache-p9ey6j-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1vwmh8m-StyledText e1vt8sjg1"
          >
            provider
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with multiline 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-v44dnh-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-v44dnh-StyledTagContainer>* {
  margin-bottom: 8px;
}

.cache-4o2pls-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-4o2pls-StyledContainer-base.cache-4o2pls-StyledContainer-base {
  margin-right: 8px;
}

.cache-1xx2k26-StyledText-textStyle {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-q170gk-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-q170gk-StyledContainer-base.cache-q170gk-StyledContainer-base {
  margin-right: 0;
}

.cache-1jveiaj-StyledManyTagsContainer {
  box-shadow: 0px 4px 32px 8px #D4DAE766;
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-p9ey6j-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-p9ey6j-StyledContainer-base.cache-p9ey6j-StyledContainer-base {
  margin: 4px;
}

.cache-1vwmh8m-StyledText {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-v44dnh-StyledTagContainer eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-4o2pls-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1xx2k26-StyledText-textStyle e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
        <div
          class="e1vt8sjg2 cache-q170gk-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1xx2k26-StyledText-textStyle e1vt8sjg1"
          >
            cloud
          </span>
        </div>
      </div>
      +1
      <div
        class="cache-1jveiaj-StyledManyTagsContainer eom2dbt0"
      >
        <div
          class="e1vt8sjg2 cache-p9ey6j-StyledContainer-base"
        >
          <span
            aria-disabled="false"
            class="cache-1vwmh8m-StyledText e1vt8sjg1"
          >
            provider
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with not tags 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;
